# C23-examples

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  meson.build
.github/workflows/: ci.yml
c11/: CMakeLists.txt  README.md  generic.c  getenv_s.c  meson.build  noreturn.c  static_assert.c  static_assert_windows.c  strcpy_s.c  tmpfile_s.c  tmpnam_s.c  vla.c
c11_annex_k/: CMakeLists.txt  strcpy_s.c  tmpfile_s.c  tmpnam_s.c
c11annex/: CMakeLists.txt  getenv_s.c  strcpy_s.c
c23/: CMakeLists.txt  README.md  bool.c  constexpr.c  fallthrough.c  has_c_attribute.c  has_include.c  limits.c  maybe_unused.c  no_return.c  nodiscard.c  noreturn.c  nullptr.c  reproducible.c  static_assert.c  strdup.c  strndup.c  unreachable.c  unsequenced.c
c26/: CMakeLists.txt  break_label.c  if_declaration.c
c2y/: CMakeLists.txt
c99/: CMakeLists.txt  README.md  designated.c  getenv.c  meson.build  restrict.c  unreachable.c
cmake/: features.cmake  libc_version.c
posix/: CMakeLists.txt  README.md  strdup.c  strndup.c
